[package]
name = "lethal-company-macros"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[dependencies]
rdev = { version = "0.5", features = ["unstable_grab"] }
